--- a/styles/main.css
+++ b/styles/main.css
@@ -14,10 +14,12 @@ h1{
   text-align: center;
   color: #515B97;
   margin: auto;
+  padding-top: 15%;
 }
 
 form{
   text-align: center;
+  padding-top: 20px;
 }
 label{
   font-weight: thin;
@@ -33,5 +35,5 @@ label{
 
 button{
   font-size: 1.25rem;
-  background-color: #97A4F3;
+  background-color: #ff0000;
 }
